# CFT_Test

./: .env  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
frontend/pages/: login.html  profile.html  registration.html
frontend/scripts/: login.js  profile.js  registration.js
frontend/styles/: base.css  login.css  profile.css  style.css
migrations/versions/: 8c2caeb298c2_start.py  b24712936f8f_start.py
src/: database.py  main.py
src/auth/: base_config.py  manager.py  models.py  router.py  schemas.py  utils.py
src/user_profile/: router.py  utils.py
tests/: conftest.py  test_db.py
