[tool.pytest.ini_options]

pythonpath = [
    ".", "src",
]

asyncio_mode = "auto"

[tool.poetry]
name = "cft-project-shunaev"
version = "0.1.0"
description = ""
authors = ["shunaev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
pytest = "^8.2.0"
httpx = "^0.27.0"
starlette = "^0.37.2"
pytest-asyncio = "^0.23.6"
gunicorn = "^22.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
